Fixed the scrollbar on de home

--- a/src/components/History/styles.module.css
+++ b/src/components/History/styles.module.css
@@ -1,6 +1,6 @@
 .container{
   width: 100%;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 170px);
 
   background-color: white;
   text-align: center;
